[package]
name = "quantumagi-deployment-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy_quantumagi"
path = "deploy_quantumagi.rs"

[[bin]]
name = "initialize_constitution"
path = "initialize_constitution.rs"

[[bin]]
name = "key_management"
path = "key_management.rs"

[[bin]]
name = "validate_deployment"
path = "validate_deployment.rs"

[[bin]]
name = "generate_program_ids"
path = "generate_program_ids.rs"

[dependencies]
# ACGS Blockchain Client
acgs-blockchain-client = { path = "../client/rust" }

# Solana and Anchor
anchor-client = "0.29.0"

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Cryptography
sha2 = "0.10"

# HTTP client (using rustls instead of openssl)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Terminal colors
colored = "2.0"

# Path expansion
shellexpand = "3.1"

# TOML serialization
toml = "0.8"

# Solana program utilities
solana-program = "2.3"
