# Constitutional Hash: cdd01ef066bc6cf2
[workspace]
members = [ "programs/*", "client/rust", "scripts",]
resolver = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
incremental = true
debug = false

[profile.dev]
incremental = true
debug = 1
opt-level = 1

[patch.crates-io.ed25519-dalek]
git = "https://github.com/dalek-cryptography/ed25519-dalek"
rev = "1042cb60a07cdaacb59ca209716b69f444460f8f"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/dalek-cryptography/curve25519-dalek"
tag = "curve25519-4.1.3"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
