[package]
name = "acgs-blockchain-client"
version = "0.1.0"
edition = "2021"
description = "ACGS Rust client for Solana blockchain interaction"

[dependencies]
# Solana core dependencies
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"

# Anchor framework
anchor-client = "0.29"
anchor-lang = "0.29"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
bs58 = "0.5"
solana-program = "1.18"

# Logging
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha256 = "1.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
sha256 = "1.5"
