[package]
name = "logging"
version = "0.1.0"
description = "Quantumagi Logging System - Comprehensive Event Logging and Monitoring"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "logging"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
