[package]
name = "pocketflow-rust"
version = "0.1.0"
edition = "2021"
description = "PocketFlow: Minimalist LLM framework with Solana & ACGS-2 QuantumAGI integration"
license = "MIT"
repository = "https://github.com/The-Pocket/PocketFlow-Rust"

[dependencies]
# Align with ACGS-2 versions
solana-client = "1.18.26"
solana-sdk = "1.18.26"
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Logging aligned with ACGS-2
log = "0.4"
env_logger = "0.9"

# Python bridge (optional)
pyo3 = { version = "0.23", optional = true }

[features]
default = []
python = ["pyo3"]
pyo3 = ["dep:pyo3"]
tpu-next = []  # For advanced TX propagation
mock-services = []  # For testing with mock services
custom-nodes = []  # For custom node implementations

[dev-dependencies]
tokio-test = "0.4"