[[bin]]
name = "deploy_quantumagi"
path = "deploy_quantumagi.rs"

[[bin]]
name = "initialize_constitution"
path = "initialize_constitution.rs"

[[bin]]
name = "key_management"
path = "key_management.rs"

[[bin]]
name = "validate_deployment"
path = "validate_deployment.rs"

[[bin]]
name = "generate_program_ids"
path = "generate_program_ids.rs"

[package]
name = "quantumagi-deployment-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.29.0"
anyhow = "1.0"
serde_json = "1.0"
sha2 = "0.10"
colored = "2.0"
shellexpand = "3.1"
toml = "0.8"
solana-program = "1.18"

[dependencies.acgs-blockchain-client]
path = "../client/rust"

[dependencies.clap]
version = "4.0"
features = [ "derive",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.tokio]
version = "1.0"
features = [ "full",]

[dependencies.reqwest]
version = "0.11"
features = [ "json", "rustls-tls",]
default-features = false

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[package.metadata.acgs]
constitutional_hash = "cdd01ef066bc6cf2"
last_updated = "2025-07-02T20:21:24.389006+00:00"
