# Constitutional Hash: cdd01ef066bc6cf2
[package]
name = "acgs-blockchain-monitoring"
version = "0.1.0"
edition = "2021"
description = "Network monitoring and observability for ACGS blockchain services"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "acgs_blockchain_monitoring"
path = "lib.rs"