[package]
name = "quantumagi_core"
version = "0.1.0"
description = "Quantumagi: On-Chain Constitutional Governance Framework for Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = [ "cdylib", "lib",]
name = "quantumagi_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = [ "no-entrypoint",]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[package.metadata.acgs]
constitutional_hash = "cdd01ef066bc6cf2"
last_updated = "2025-07-02T20:21:24.390094+00:00"
