[package]
name = "blockchain_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
governance_rules = { path = "../governance_rules" }
# Shared ACGS libraries
acgs-constitutional = { path = "../../../shared/constitutional" }
acgs-types = { path = "../../../shared/types", features = ["blockchain"] }
acgs-monitoring = { path = "../../../shared/monitoring" }

[dev-dependencies]
tokio-test = "0.4"
