# Constitutional Hash: cdd01ef066bc6cf2
[package]
name = "expert_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
itertools = "0.12"
thiserror = "1.0"
governance_rules = { path = "../governance_rules" }
# Shared ACGS libraries
acgs-constitutional = { path = "../../../shared/constitutional" }
acgs-types = { path = "../../../shared/types" }
acgs-monitoring = { path = "../../../shared/monitoring" }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
